--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./dist/style.css"/>
+    <link rel="stylesheet" href="./dist/style.e04bec10308c74f6c1f0.css"/>
     <title>Document</title>
 </head>
 <body>
     
-    <script src="./dist/bundle.js"></script> 
+    <script src="./dist/bundle.199669c0a22252ce337e.js"></script> 
     
     <!--<imag alt="BumperAd" width="300" src="./dist/fe8faff30561731ba3214aaad1d842f5.png"></imag>-->
 </body>
